[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loosh-inference-miner"
version = "1.2.0"
authors = [
    { name = "Loosh Team", email = "team@loosh.ai" },
]
description = "A bittensor subnet miner for LLM inference"
readme = "README.md"
requires-python = "==3.12.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.27.0",
    "uvloop>=0.19.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "transformers>=4.45.0",
    "requests>=2.31.0",
    "cryptography>=43.0.0,<43.1.0",
    "redis>=5.0.0",
    "fiber[full] @ git+https://github.com/chutesai/fiber.git@a41ab890708757140a3cf4aae8e5af57a8b03159",
]

[project.optional-dependencies]
# LLM Backend dependencies
vllm = [
    "vllm>=0.14.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "openai>=1.0.0",
    "uvloop>=0.19.0",
]
ollama = [
    "ollama>=0.6.0",
    "openai>=1.0.0",
]
llamacpp = [
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
]
# All backends
all = [
    "vllm>=0.14.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "uvloop>=0.19.0",
]
# Development dependencies
dev = [
    "pytest>=8.0.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.entry-points."inference.backends"]
vllm = "miner.core.llms.llm_vllm:VLLMService"
ollama = "miner.core.llms.llm_ollama:OllamaService"
llamacpp = "miner.core.llms.llm_llamacpp:LlamaCppService"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = []

[tool.uv]
cache-dir = ".uv-cache"
link-mode = "copy"

# Override fiber's strict dependency pins to allow vllm>=0.14
override-dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.12.0",
]